import("../../webrtc.gni")
import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

rtc_library("external_processor") {
   visibility = [ "*" ]
   configs += [ "../../modules/audio_processing:apm_debug_dump", ]
   configs += [ "//build/config/android:hide_all_but_jni" ]
   defines = ["WEBRTC_ANDROID", "WEBRTC_POSIX",]
   sources = [
      "krisp_processor.cc",
      "krisp_processor_jni.cc",]
   lib_dirs = []
   deps = [":generated_external_jni",
           ":external_java",
           "../../rtc_base:logging",
           "../../sdk/android:native_api_jni",
           "../../modules/audio_processing:audio_processing",
   ]
   if (target_cpu == "arm64") {
     lib_dirs += [ "lib/arm64",]
   }
   if (target_cpu == "x64") {
     lib_dirs += [ "lib/x86_64",]
   }
   if (target_cpu == "arm") {
     lib_dirs += [ "lib/arm",]
   }
   if (target_cpu == "x86") {
     lib_dirs += [ "lib/x86",]
   }
   libs = [ "krisp-audio-sdk"]
}

rtc_android_library("external_java") {
  visibility = [ "*" ]
  sources = [
    "java/src/org/webrtc/ExternalAudioProcessingImpl.java",]
  deps = ["//sdk/android:peerconnection_java",]
}

generate_jni("generated_external_jni") {
    sources = [ "java/src/org/webrtc/ExternalAudioProcessingImpl.java",]
    namespace = "External"
    jni_generator_include = "//sdk/android/src/jni/jni_generator_helper.h"
}
