import("../../webrtc.gni")
import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

rtc_library("external_processing") {
    visibility = [ "*" ]
    configs += [ "../../modules/audio_processing:apm_debug_dump", ]
    configs += [ "//build/config/android:hide_all_but_jni" ]
    defines = ["WEBRTC_ANDROID", "WEBRTC_POSIX",]
    sources = [
        "include/external_processor.hpp",
        "external_processing.hpp",
        "external_processing.cc",
        "external_processing_factory_jni.cc",
    ]
    lib_dirs = []
    deps = [
        ":generated_external_jni",
        ":external_java",
        "../../rtc_base:logging",
        "../../sdk/android:native_api_jni",
        "../../modules/audio_processing:audio_processing",
    ]
}

rtc_android_library("external_java") {
    visibility = [ "*" ]
    sources = [
        "java/src/org/webrtc/ExternalAudioProcessingFactory.java",
    ]
    deps = ["//sdk/android:peerconnection_java",]
}

generate_jni("generated_external_jni") {
    sources = [
        "java/src/org/webrtc/ExternalAudioProcessingFactory.java",
    ]
    namespace = "external"
    jni_generator_include = "//sdk/android/src/jni/jni_generator_helper.h"
}
